# datasize-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
datasize/: Cargo.toml
datasize/examples/: simple.rs
datasize/src/: fake_clock.rs  futures.rs  lib.rs  smallvec.rs  std.rs  tokio.rs
datasize_derive/: Cargo.toml
datasize_derive/src/: lib.rs
src/: lib.rs
