[package]
name = "datasize"
version = "0.1.0"
authors = ["Marc Brinkmann <marc@casperlabs.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simplified heap memory size estimator"

[features]
futures-types = ["futures"]
smallvec-types = ["smallvec"]
tokio-types = ["tokio"]

[dependencies]
datasize_derive = { path = "../datasize_derive" }
futures = { version = "0.3.5", optional = true }
tokio = { version = "0.2.22", default-features = false, optional = true, features = ["rt-core", "sync"] }
smallvec = { version = "1.4.2", optional = true }
