[package]
name = "datasize_derive"
version = "0.2.8"
authors = ["Marc Brinkmann <marc@casperlabs.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Derive macros for the `datasize` crate"
documentation = "https://docs.rs/datasize_derive"
repository = "https://github.com/casperlabs/datasize-rs"

[lib]
proc-macro = true

[features]
detailed = []

[dependencies]
proc-macro2 = "1.0.21"
quote = "1.0.7"
syn = { version = "1.0.41", features = ["full", "extra-traits"] }

[package.metadata.docs.rs]
all-features = true
